# qlink

./: .gitignore  .gitmodules  CMakeLists.txt  install.sh  required_pkgs.txt
server/: database.db3  schema.sql
server/static/: addURL.js  ads.txt  custom.html  custom.js  new.html  privacy.html  styles.css
src/: CMakeLists.txt  database.cpp  database.hpp  ddl_defs.h  defs.h  main.cpp  schema.sql  server.cpp  server.hpp
